--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 <html>
 <head>
  <link rel="stylesheet" href="{{ url_for('static', filename='style.css')}}">
-    <title>Wikipedia Search</title>
+    <title>Recipe Search</title>
 </head>
 
 <body>
@@ -14,9 +14,7 @@
 {% endblock %}
 
 <footer>
-    <p>Data from <a href="https://www.wikipedia.org" target="_blank">Wikipedia</a> and
-        <a href="https://www.wikipedia.org" target="_blank">OpenStreetMap</a>.
-    </p>
+    <p>Copyright Simone Chadha. All rights reserved.</p>
 </footer>
 
 </body>
