--- a/templates/index.html
+++ b/templates/index.html
@@ -3,23 +3,15 @@
 {% block content %}
 
 <form method = 'POST' action = '/results'>
-    <h1 class="heading">Search local Wikipedia articles</h1>
+    <h1 class="heading">Find Recipes for you</h1>
 
 <!--A text input field for the place name-->
-    <label for="place">Place:</label><br>
-    <input type="text" id="place" name="place"><br>
+    <label for="ingredients">Enter your groceries from this week:</label><br>
+    <input type="text" id="ingredients" name="ingredients"><br>
 
 <!--A number input field for the number of results to return.-->
-    <label for="max_results">Maximum number of results:</label><br>
-    <input type="number" id="max_results" name="max_results" value="10"><br>
-<!--A number input field for the search radius.-->
-    <label for="radius">Radius within which to return results (in miles):</label><br>
-    <input type="number" id="radius" name="radius" value="2"><br>
-
-<!--A checkbox to sort by length of pages (longest-article-first)-->
-    <input type="checkbox" id="sort" name="sort">
-    <label for="sort"> Sort results (longest-article-first)</label><br>
-
+    <label for="number">Maximum number of results:</label><br>
+    <input type="number" id="number" name="number" value="10"><br>
 
   <input type="submit" value="Submit">
 
