Worked on formatting results and recipe pages

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 {% endblock %}
 
 <footer>
-    <p>Copyright Simone Chadha. All rights reserved.</p>
+<!--    <p>By Simone Chadha. Data from Spoonacular.</p>-->
 </footer>
 
 </body>
