--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
 <form method = 'POST' action = '/results'>
     <h1 class="heading">Find Recipes for you</h1>
 
+    <div class ="userInput">
 <!--A text input field for the place name-->
     <label for="ingredients">Enter your groceries from this week:</label><br>
     <input type="text" id="ingredients" name="ingredients"><br>
@@ -14,7 +15,7 @@
     <input type="number" id="number" name="number" value="10"><br>
 
   <input type="submit" value="Submit">
-
+    </div>
 </form>
 
 {% endblock %}
