Worked on formatting results and recipe pages

--- a/templates/results.html
+++ b/templates/results.html
@@ -18,6 +18,9 @@
   {% else %}
 <!--for each recipe that comes after the user enters their groceries list,  recipe name, -->
     <ul>
+
+<!--WOULD YOU NEED A SEPARATE TEMPLATE TO HAVE ALL OF THIS INFO IN CARD FORMAT ?
+like each recipe card would extend this format?-->
       <h1 class="heading">Find Recipes for you</h1>
     {% for recipe in results %}
 <!--        {{recipe}}<br>-->
