--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <form method = 'POST' action = '/results'>
-    <h1 class="heading">Find Recipes for you</h1>
+    <h1 class="heading">Search Recipes</h1>
 
     <div class ="userInput">
 <!--A text input field for the place name-->
