--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -3,35 +3,40 @@
 
 <h1>{{recipe.title}}</h1>
 
-  <img src="{{recipe.image}}" alt="Image of {{recipe.title}}"><br>
+  <img class="recipeImage" src="{{recipe.image}}" alt="Image of {{recipe.title}}"><br>
 
 <!--  ADD AMOUNT OF EACH INGREDIENT AS A LIST-->
 
 <h2>Ingredients:</h2>
 <!--<ul></ul>-->
+<ol>
+{% for ingredient in recipe.extendedIngredients %}
+<li>{{ingredient.original}}</li>
+{% endfor %}
+</ol>
 <!--include a list of important info before the summary: preparationMinutes, readyInMinutes, cuisine (if there), servings -->
 <h2>Recipe Summary:</h2>
 
 <ul>
 <!--  add readyInMinutes, servings, cuisine, on the results page cards-->
   {% if recipe.readyInMinutes != None %}
-  <li>Ready in: {{recipe.readyInMinutes}} minutes</li>
+    <li>Ready in: {{recipe.readyInMinutes}} minutes</li>
   {% endif %}
 
   {% if recipe.preparationMinutes != None %}
-  <li>Preparation Time: {{recipe.preparationMinutes}} minutes</li>
+    <li>Preparation Time: {{recipe.preparationMinutes}} minutes</li>
   {% endif %}
 
   {% if recipe.cookingMinutes != None %}
-  <li>Cooking time: {{recipe.cookingMinutes}}</li>
+    <li>Cooking time: {{recipe.cookingMinutes}}</li>
   {% endif %}
 <!--  check if the cuisines list is empty-->
   {% if recipe.servings != 0 %}
-  <li>Servings: {{recipe.servings}}</li>
+    <li>Servings: {{recipe.servings}}</li>
   {% endif %}
 
   {% if recipe.cuisines | length > 0 %}
-  <li>Cuisine: {{recipe.cuisines[0]}}</li>
+    <li>Cuisine: {{recipe.cuisines[0]}}</li>
   {% endif %}
 </ul>
 
@@ -42,12 +47,12 @@
 
 <!--handle case of what to do if no instructions-->
 {% if recipe.instructions != None %}
-<h2>Recipe Instructions:</h2>
-<p>{{recipe.instructions}}</p>
+  <h2>Recipe Instructions:</h2>
+  <p>{{recipe.instructions|safe}}</p>
 {% else %}
-<h2>Recipe Instructions:</h2>
-<p>There are no instructions for this recipe,
-  but check out the similar recipes in the "Recipe Summary"!</p>
+  <h2>Recipe Instructions:</h2>
+  <p>There are no instructions for this recipe,
+      but check out the similar recipes in the "Recipe Summary"!</p>
 {% endif %}
 
 {% endblock %}
