Added ingredients and adjusted formatted

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 
 
 <!DOCTYPE html>
-<html>
+<html class="pageMargins">
 <head>
  <link rel="stylesheet" href="{{ url_for('static', filename='style.css')}}">
     <title>Recipe Search</title>
