--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1>{{recipe.title}}</h1>
+<h1 class="recipePageTitle">{{recipe.title}}</h1>
 
   <img class="recipeImage" src="{{recipe.image}}" alt="Image of {{recipe.title}}"><br>
 
 <!--  ADD AMOUNT OF EACH INGREDIENT AS A LIST-->
 
-<h2>Ingredients:</h2>
+<h2 class="heading2">Ingredients:</h2>
 <!--<ul></ul>-->
 <ol>
 {% for ingredient in recipe.extendedIngredients %}
@@ -15,7 +15,7 @@
 {% endfor %}
 </ol>
 <!--include a list of important info before the summary: preparationMinutes, readyInMinutes, cuisine (if there), servings -->
-<h2>Recipe Summary:</h2>
+<h2 class="heading2">Recipe Summary:</h2>
 
 <ul>
 <!--  add readyInMinutes, servings, cuisine, on the results page cards-->
@@ -47,10 +47,10 @@
 
 <!--handle case of what to do if no instructions-->
 {% if recipe.instructions != None %}
-  <h2>Recipe Instructions:</h2>
+  <h2 class="heading2">Recipe Instructions:</h2>
   <p>{{recipe.instructions|safe}}</p>
 {% else %}
-  <h2>Recipe Instructions:</h2>
+  <h2 class="heading2">Recipe Instructions:</h2>
   <p>There are no instructions for this recipe,
       but check out the similar recipes in the "Recipe Summary"!</p>
 {% endif %}
