--- a/templates/results.html
+++ b/templates/results.html
@@ -19,16 +19,15 @@
 <!--for each recipe that comes after the user enters their groceries list,  recipe name, -->
 
 
-
       <h1 class="heading">Recipes Including your Ingredients</h1>
     {% for recipe in results %}
 <!--        {{recipe}}<br>-->
 
 <!--div class for each card-->
         <div class="recipeCard">
-        <h2>{{recipe.title}}</h2><br>
+        <h2 class="heading2">{{recipe.title}}</h2><br>
 
-        <img src="{{recipe.image}}" alt="Image of {{recipe.title}}"><br>
+        <img class="recipeImageResults" src="{{recipe.image}}" alt="Image of {{recipe.title}}"><br>
 
         <form method="POST" action="/recipe">
 
