Completed all design changes

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,8 +2,11 @@
 
 
 <!DOCTYPE html>
-<html class="pageMargins">
+<html>
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
  <link rel="stylesheet" href="{{ url_for('static', filename='style.css')}}">
     <title>Recipe Search</title>
 </head>
@@ -14,7 +17,7 @@
 {% endblock %}
 
 <footer>
-<!--    <p>By Simone Chadha. Data from Spoonacular.</p>-->
+    <p class="centerFooter" >Created By Simone Chadha. Data from Spoonacular.</p>
 </footer>
 
 </body>
