--- a/templates/index.html
+++ b/templates/index.html
@@ -7,14 +7,14 @@
 
     <div class ="userInput">
 <!--A text input field for the place name-->
-    <label for="ingredients">Enter your groceries from this week:</label><br>
-    <input type="text" id="ingredients" name="ingredients"><br>
+    <label class="heading2" for="ingredients">Enter your groceries from this week:</label><br>
+    <input class="userInputFields" type="text" id="ingredients" name="ingredients"><br>
 
 <!--A number input field for the number of results to return.-->
-    <label for="number">Maximum number of results:</label><br>
-    <input type="number" id="number" name="number" value="10"><br>
+    <label class="heading2" for="number">Maximum number of results:</label><br>
+    <input class="userInputFields" type="number" id="number" name="number" value="10"><br>
 
-  <input type="submit" value="Submit">
+  <input class="readMoreButton" type="submit" value="Submit">
     </div>
 </form>
 
