--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -3,10 +3,11 @@
 
 <h1 class="recipePageTitle">{{recipe.title}}</h1>
 
-  <img class="recipeImage" src="{{recipe.image}}" alt="Image of {{recipe.title}}"><br>
+
 
 <!--  ADD AMOUNT OF EACH INGREDIENT AS A LIST-->
-
+<div class="recipeContent">
+    <img class="recipeImage" src="{{recipe.image}}" alt="Image of {{recipe.title}}"><br>
 <h2 class="heading2">Ingredients:</h2>
 <!--<ul></ul>-->
 <ol>
@@ -54,5 +55,5 @@
   <p>There are no instructions for this recipe,
       but check out the similar recipes in the "Recipe Summary"!</p>
 {% endif %}
-
+</div>
 {% endblock %}
